Fir 29832 removed lang3 (#330)